--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jan 22 2023 22:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Feb 21 2023 15:42:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63c9b3b5d817ca9c1560af0e" data-wf-site="63c9b3b5d817cae78860aefc">
 <head>
   <meta charset="utf-8">
@@ -11,8 +11,10 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/the-junk-shop.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Quicksand:300,regular,500,600,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Quicksand:300,regular,500,600,700"]  }});</script>
   <script src="https://use.typekit.net/dpi8ekp.js" type="text/javascript"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -28,7 +30,7 @@
         <div class="paragraph-bigger cc-bigger-light">The page you are looking for doesn&#x27;t exist or has been moved.</div>
       </div>
       <a href="index.html" class="button cc-white-button w-inline-block">
-        <div>Go Back to home</div>
+        <div class="text-block-3">Go Back to home</div>
       </a>
     </div>
   </div>
